--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name= "menu_Perfil_de_planta">Perfil de planta</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_plant_label">Agregar Nueva Planta</string>
+    <string name="Plant_profile_label">Perfiles de planta</string>
 </resources>
